2005-11-21  Stefan Monnier  <monnier@iro.umontreal.ca>

	* haskell-doc.el (haskell-doc-extract-types): Get it partly working.
	(haskell-doc-fetch-lib-urls): Don't use a literal if we apply
	`nreverse' on it later on.
	(haskell-doc-prelude-types): Update some parts by auto-generation.
	(haskell-doc-grab, haskell-doc-string-nub-ws): Simplify.

	* haskell-doc.el (haskell-doc-maintainer, haskell-doc-varlist)
	(haskell-doc-submit-bug-report, haskell-doc-ftp-site)
	(haskell-doc-visit-home): Remove.
	(haskell-doc-reserved-ids, haskell-doc-fetch-lib-urls)
	(haskell-doc-extract-and-insert-types): New funs.
	(haskell-doc-reserved-ids): Fix type of `map'.

2005-11-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* inf-haskell.el (inferior-haskell-load-file): Fix the
	compilation-parsing-end fiddling so it doesn't get moved inadvertently.

	* haskell-font-lock.el (haskell-font-lock-symbols-alist): Some XEmacs
	versions define make-char but not charsetp.
	(haskell-font-lock-symbols-keywords): Add a `keep' arg so
	de-highlighting in strings works correctly even in Emacs-21.

	* haskell-doc.el: Add coding cookie.

2005-11-14  Stefan Monnier  <monnier@iro.umontreal.ca>

	* haskell-decl-scan.el (haskell-ds-get-variable): Massage.
	(haskell-ds-move-to-decl, haskell-ds-generic-find-next-decl):
	Use with-syntax-table.

2005-11-14  Dave Love  <fx@gnu.org>

	* haskell-decl-scan.el: Docstring fixes.
	(haskell-ds-keys): Delete.
	(turn-on-haskell-decl-scan): Inline it here.
	Use beginning-of-defun-function if available.

	* haskell-font-lock.el (haskell-font-lock-keywords-create): Add pattern
	for numbers and strings for arguments to toplevel declarations.

2005-11-14  Stefan Monnier  <monnier@iro.umontreal.ca>

	* inf-haskell.el (inferior-haskell-error-regexp-alist): Fix GHCi
	regexp, add support for warnings.

2005-11-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* Makefile (dist): Remove profile file and avoid ztar.

	* inf-haskell.el (inferior-haskell-command): Provide a default.